# B_audio_project

./: .gitignore  README.md  package-lock.json  package.json  state.md
.github/workflows/: env  opencode.yml
apps/desktop-pyside/: README.md  main.py
apps/desktop-ui/: index.html  package.json  vite.config.ts
apps/desktop-ui/src/: App.tsx  styles.css
docs/: development-backlog.md  frontend-ui-direction-plan.md  product-interpretation.md  technical-architecture.md  ui-wireframe-spec.md  ui-wireframes-ascii.md
engine/: requirements.txt
engine/app/: __init__.py  main.py
engine/app/analysis/: __init__.py
research/: 00_HOME.md  README.md
research/doku/: 01_KI_Audio_Artefakte_und_ihre_Ursachen.md  02_Quellentrennung_als_Fundament.md  03_Neuronale_Vocoder_und_Signalrestaurierung.md  04_Modulare_Pipeline_ohne_Mastering.md  05_Checkerboard_und_Fourier_Artefakte.md  06_Referenzfreies_Mastering_und_Alternativen.md  07_Lastenheft_Pipeline_Architektur.md
research/moc/: MOC_Artefakte.md  MOC_Denoising.md  MOC_Mastering.md  MOC_Pipeline.md  MOC_Stem_Separation.md  MOC_Vocoder.md
research/quellen/: 01_AI_music_detection_checkerboard_artifacts.md  03_fix_metallic_robotic_sound_undetectr.md  18_youtube_benn_jordan_ai_detect.md  FEHLENDE_QUELLEN.md
shared/schemas/: run-payload.example.json  run-report.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/jobs/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/settings/: mod.rs
(+81 files in other folders)
