[package]
name = "b-audio-project"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
dirs = "6"
rusqlite = { version = "0.36", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
